<resources>
    <string name="app_name">BreakFoodApp</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio">Inicio</string>
    <string name="todo">TODO</string>
    <string name="correo">Correo:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="facebook_app_id">403915313674067</string>
    <string name="fb_login_protocol_scheme">fb403915313674067</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="inicio_sesi_n">Inicio Sesión</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoidm9sdGF4OTEiLCJhIjoiY2p0dGl3dWl5MWM3dzRlbnNxbzNwNXVuaSJ9.PtCqjIX67ENLJ9Wj9SD8Ug</string>
    <string name="msg">Please Enable Permissions</string>
    <string name="agregar">Agregar</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="id_facebook">282934949316021</string>
    <string name="Appsign">0Io7OIgUx5dBw4aOeJ8BSS6Db9Y=</string>
    <string name="mixpanel_token">2e8bdc478fb999b0ffdfb0a8b06673ff</string>

</resources>
